--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wood-Design</title>
+    <!--FONT AWESOME-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!--LINK TO CSS-->
     <link rel="stylesheet" href="./style/main.css">
 </head>
@@ -13,7 +15,7 @@
     <div id="progress_bar"></div>
     <div id="scroll_path"></div>
     <!--HEADER-->
-    <header class="nav">
+    <!-- <header class="nav">
         <a href="#" class="logo">Wood Design</a>
         <nav>
             <ul>
@@ -23,14 +25,16 @@
                 <li><a href="#">inicio</a></li>
             </ul>
         </nav>
-    </header>
-    <!--PORTADA-->
+    </header> -->
+    <!--MAIN-->
     <div class="wrapper">
 	    <div class="content">
+            <!--FOG-->
             <div class="container_fog">
                 <div class="img_fog img_fog_1"></div>
                 <div class="img_fog img_fog_2"></div>
             </div>
+            <!--PORTADA-->
             <header class="main-header">
 			    <div class="layers">
 					<div class="layer__header">
@@ -41,9 +45,12 @@
 					<div class="layer layers__middle" style="background-image: url(imagenes/layer-middle.png);"></div>
 					<div class="layer layers__front" style="background-image: url(imagenes/layer-front.png);"></div>
 				</div>
-			</header>	
-			<article class="container_products">
-				<div class="products_content">
+			</header>
+            <!--CONTAINER PRODUCTS-->
+		    <article class="container_products">
+                <!--COCINAS-->
+                <h1 class="products_title">COCINAS</h1>
+			    <div class="products_content">
                     <div class="container_cards">
                         <div class="card">
                             <div class="box cocina_1"></div>
@@ -54,10 +61,36 @@
                         <div class="card">
                             <div class="box cocina_3"></div>
                         </div>
+                        <div class="card">
+                            <div class="box cocina_4"></div>
+                        </div>
+                        <div class="card">
+                            <div class="box cocina_5"></div>
+                        </div>
+                        <div class="card">
+                            <div class="box cocina_6"></div>
+                        </div>
                     </div>
-				</div>
-				<div class="copy">© RZT</div>
-			</article>
+			    </div>
+                <!--BANIO-->
+                <h1 class="products_title">BAÑOS</h1>
+			    <div class="products_content">
+                    <div class="container_cards">
+                        <div class="card">
+                            <div class="box banio_1"></div>
+                        </div>
+                        <div class="card">
+                            <div class="box banio_2"></div>
+                        </div>
+                        <div class="card">
+                            <div class="box banio_3"></div>
+                        </div>
+                    </div>
+			    </div>
+            </article>
+            <footer>
+                asdasd
+            </footer>
 		</div>
 	</div>
     <!--LINK TO GSAP-->
