--- a/index.html
+++ b/index.html
@@ -88,8 +88,34 @@
                     </div>
 			    </div>
             </article>
+            <!--FOOTER-->
             <footer>
-                asdasd
+                <div class="social">
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-whatsapp"></i></a>
+                </div>
+                <ul class="list">
+                    <li>
+                        <a href="#">Inicio</a>
+                    </li>
+                    <li>
+                        <a href="#">Inicio</a>
+                    </li>
+                    <li>
+                        <a href="#">Inicio</a>
+                    </li>
+                    <li>
+                        <a href="#">Inicio</a>
+                    </li>
+                    <li>
+                        <a href="#">Inicio</a>
+                    </li>
+                </ul>
+                <p class="copyright">
+                    RZT @ 2023
+                </p>
             </footer>
 		</div>
 	</div>
