--- a/index.html
+++ b/index.html
@@ -75,9 +75,31 @@
                     </div>
                 </div>
             </section>
+            <!--PROCESO-->
+            <section id="proceso" class="proceso">
+                <h1>Nuestro Proceso</h1>
+                <div class="container_proceso">
+                    <div class="visita">
+                        <i class="fa-regular fa-pen-to-square"></i>
+                        <p>Agenda la visita<br>
+                            <span>Comunicate con nuestro equipo a través del correo electrónico o Whatsapp.</span></p>
+                    </div>
+                    <div class="disenio">
+                        <i class="fa-solid fa-screwdriver-wrench"></i>
+                        <p>Fabricacion y Diseño<br>
+                            <span>Nuestro equipo de diseño entregará tu pedido a producción</span></p>
+                    </div>
+                    <div class="entrega">
+                        <i class="fa-solid fa-truck-fast"></i>
+                        <p>Entrega<br>
+                            <span>Nos pondremos en contacto para fijar hora y fecha de la entrega del producto</span></p>
+                    </div>
+                </div>
+            </section>
             <!--CONTAINER PRODUCTS-->
 		    <article id="productos" class="container_products">
                 <!--COCINAS-->
+                <h1 class="products_title2" >NUESTROS PRODUCTOS</h1>
                 <h1 class="products_title">COCINAS</h1>
 			    <div class="products_content">
                     <div class="container_cards">
@@ -113,6 +135,21 @@
                         </div>
                         <div class="card">
                             <div class="box banio_3"></div>
+                        </div>
+                    </div>
+			    </div>
+                <!--ROPEROS Y TV-->
+                <h1 class="products_title">ROPEROS Y TV</h1>
+			    <div class="products_content">
+                    <div class="container_cards">
+                        <div class="card">
+                            <div class="box ropero_1"></div>
+                        </div>
+                        <div class="card">
+                            <div class="box ropero_2"></div>
+                        </div>
+                        <div class="card">
+                            <div class="box tv_1"></div>
                         </div>
                     </div>
 			    </div>
