--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
     <!--LINK TO CSS-->
     <link rel="stylesheet" href="./style/main.css">
 </head>
-<body>
+<body class="hidden">
+    <!--LOADER-->
+    <div class="centrado" id="onload">
+        <div class="cssload-loader"></div>
+    </div>
     <!--SCROLL-->
     <div id="progress_bar"></div>
     <div id="scroll_path"></div>
