--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
             <button id="cerrar" class="menu_cerrar"><i class="fa-light fa-x"></i></button>
             <ul class="nav_list"> 
                 <li><a class="desplazar" href="#inicio">Inicio</a></li>
-                <li><a class="desplazar" href="#porque">Quienes somos</a></li>
+                <li><a class="desplazar" href="#porque">Muebles a medida</a></li>
                 <li><a class="desplazar" href="#productos">Productos</a></li>
-                <li><a href="#">Contacto</a></li>
+                <li><a class="desplazar" href="#cotizacion">Cotizacion</a></li>
                 <li><a href="#">Que hacemos</a></li>
             </ul>
         </nav>
@@ -158,6 +158,16 @@
                     </div>
 			    </div>
             </article>
+            <!--FORMULARIO COTIZACION-->
+            <div id="cotizacion" class="container_cotizacion">
+                <h1>Pedinos tu COTIZACION</h1>
+                <form class="cotizacion_form" action="index.html" method="post"></form>
+                <input type="text" class="cotizacion_form_text" placeholder="Nombre">
+                <input type="email" class="cotizacion_form_text" placeholder="Email">
+                <input type="text" class="cotizacion_form_text" placeholder="Celular">
+                <textarea class="cotizacion_form_text2" placeholder="Mensaje"></textarea>
+                <input type="submit" class="cotizacion_form_btn" value="Enviar">
+            </div>
             <!--FOOTER-->
             <footer>
                 <div class="social">
@@ -168,16 +178,16 @@
                 </div>
                 <ul class="list">
                     <li>
-                        <a href="#">Inicio</a>
+                        <a class="desplazar" href="#inicio">Inicio</a>
                     </li>
                     <li>
-                        <a href="#">Inicio</a>
+                        <a class="desplazar" href="#porque">Muebles a medida</a>
                     </li>
                     <li>
-                        <a href="#">Inicio</a>
+                        <a class="desplazar" href="#productos">Productos</a>
                     </li>
                     <li>
-                        <a href="#">Inicio</a>
+                        <a class="desplazar" href="#cotizacion">Cotizacion</a>
                     </li>
                     <li>
                         <a href="#">Inicio</a>
