--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <button id="cerrar" class="menu_cerrar"><i class="fa-light fa-x"></i></button>
             <ul class="nav_list"> 
                 <li><a class="desplazar" href="#inicio">Inicio</a></li>
-                <li><a class="desplazar" href="#porque">Muebles a medida</a></li>
+                <li><a class="desplazar" href="./pages/medida.html">Muebles a medida</a></li>
                 <li><a class="desplazar" href="#productos">Productos</a></li>
                 <li><a class="desplazar" href="#cotizacion">Cotizacion</a></li>
                 <li><a href="#">Que hacemos</a></li>
@@ -53,6 +53,68 @@
 					<div class="layer layers__front" style="background-image: url(imagenes/layer-front.png);"></div>
 				</div>
 			</header>
+            <!--MUEBLES A MEDIDA-->
+		    <!-- <article id="medida" class="container_info_medida">
+                <h1 class="info_medida_title2" >MUEBLES A MEDIDA</h1>
+                <h1 class="info_medida_title">ALGUNOS PRODUCTOS NUESTROS</h1>
+			    <div class="info_medida_content">
+                    <div class="container_info_cards">
+                        <div class="card">
+                            <div class="box cocina_1"></div>
+                        </div>
+                        <div class="card">
+                            <div class="box cocina_2"></div>
+                        </div>
+                        <div class="card">
+                            <div class="box cocina_3"></div>
+                        </div>
+                    </div>
+			    </div>
+                <button class="btn_main">IR A LA TIENDA</button>
+            </article> -->
+            <!--TIENDA-->
+		    <!-- <article id="tienda" class="container_info_tienda">
+                <h1 class="info_tienda_title2" >TIENDA</h1>
+                <h1 class="info_tienda_title">ALGUNOS PRODUCTOS NUESTROS</h1>
+			    <div class="info_tienda_content">
+                    <div class="container_info_cards">
+                        <div class="card">
+                            <div class="box cocina_1"></div>
+                        </div>
+                        <div class="card">
+                            <div class="box cocina_2"></div>
+                        </div>
+                        <div class="card">
+                            <div class="box cocina_3"></div>
+                        </div>
+                    </div>
+			    </div>
+                <button class="btn_main">IR A LA TIENDA</button>
+            </article> -->
+            <!--NOSOTROS-->
+            <section id="nosotros" class="nosotros">
+                <h1>NOSOTROS</h1>
+                <div class="container_nosotros">
+                    <div class="text_nosotros">
+                        <i class="fa-solid fa-user-group"></i>
+                        <p>WOOD DESIGN<br>
+                            <span>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Repudiandae ullam soluta excepturi officia asperiores 
+                                quis tempora, id assumenda! Recusandae eius sint 
+                                asperiores voluptas eum nulla laborum quo magnam facilis 
+                                commodi amet repellat quisquam corporis consequatur ut 
+                                aliquid odio in nesciunt, incidunt illum tenetur saepe 
+                                delectus eos exercitationem. Cupiditate, ad accusamus? 
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Quaerat architecto facere temporibus aliquid voluptatum
+                                ullam excepturi dignissimos molestiae harum, quam 
+                                aperiam ducimus enim porro quidem similique est impedit
+                                quibusdam nesciunt iste natus sint, dolor omnis! 
+                                Molestiae dolor atque nemo, quidem optio nihil beatae
+                                , fuga, minus facilis dolorem ab quis totam.</span></p>
+                    </div>
+                </div>
+            </section>
             <!--PORQUE-->
             <section id="porque" class="porque">
                 <h1>¿Por qué tener muebles a la medida?</h1>
@@ -161,6 +223,7 @@
             <!--FORMULARIO COTIZACION-->
             <div id="cotizacion" class="container_cotizacion">
                 <h1>Pedinos tu COTIZACION</h1>
+                <h2>Llena el formulario y nos pondremos en contacto contigo</h2>
                 <form class="cotizacion_form" action="index.html" method="post"></form>
                 <input type="text" class="cotizacion_form_text" placeholder="Nombre">
                 <input type="email" class="cotizacion_form_text" placeholder="Email">
